<resources>
    <string name="app_name">Bookitlist</string>
    <string name="live_for_adventure">Live for Adventure</string>
    <string name="create_your_bookitlist">Create your Bookitlist</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="hint_full_name">Full Name</string>
    <string name="prompt_dont_have_account">Don\'t have an account? </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="phone_your_number_hint">Your number</string>
    <string name="_91">+91</string>
    <string name="err_msg_enter_phone_number">Please enter your phone number</string>
    <string name="err_msg_enter_password">Please enter your password</string>
    <string name="err_msg_enter_full_name">Please enter your full name</string>
    <string name="err_msg_enter_username">Please enter your username</string>
    <string name="err_msg_enter_email">Please enter your email</string>
    <string name="err_msg_confirm_password">Please confirm your password</string>
    <string name="err_msg_password_mismatch">Passwords do not match</string>


</resources>