<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:fillViewport="true"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/bookitlist_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up"
            android:textColor="@color/text_color_primary"
            android:textSize="24sp"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <EditText
            android:id="@+id/fullNameEditText"
            style="@style/CommonEditTextStyle"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_full_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpTitle" />

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/CommonEditTextStyle"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullNameEditText" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/CommonEditTextStyle"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

        <EditText
            android:id="@+id/phoneEditText"
            style="@style/CommonEditTextStyle"
            android:layout_marginTop="20dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/CommonEditTextStyle"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneEditText" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            style="@style/CommonEditTextStyle"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

        <TextView
            android:id="@+id/termsAndConditionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/text_color_secondary"
            app:layout_constraintStart_toStartOf="@id/confirmPasswordEditText"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/SignInButton"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="@id/confirmPasswordEditText"
            app:layout_constraintStart_toStartOf="@id/confirmPasswordEditText"
            app:layout_constraintTop_toBottomOf="@id/termsAndConditionsTextView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpButton">

            <TextView
                android:id="@+id/alreadyHaveAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/text_color_secondary"
                android:textSize="19sp"
                app:fontFamily="@font/roboto_regular" />

            <TextView
                android:id="@+id/signInLinkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimary"
                android:textSize="19sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>