<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">

    <ImageView
        android:id="@+id/bottomImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_signup_bottom"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".SignInActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/bookitlist_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signInTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:text="@string/sign_in"
                android:textColor="@color/text_color_primary"
                android:textSize="24sp"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                style="@style/CommonEditTextStyle"
                android:layout_marginTop="32dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signInTitle" />

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/CommonEditTextStyle"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText" />

            <Button
                android:id="@+id/signInButton"
                style="@style/SignInButton"
                android:layout_width="0dp"
                android:layout_marginTop="32dp"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="@id/passwordEditText"
                app:layout_constraintStart_toStartOf="@id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                android:textColor="@color/text_color_secondary"
                android:textSize="19sp"
                app:fontFamily="@font/roboto_regular"
                app:layout_constraintEnd_toEndOf="@id/signInButton"
                app:layout_constraintStart_toStartOf="@id/signInButton"
                app:layout_constraintTop_toBottomOf="@id/signInButton" />

            <LinearLayout
                android:id="@+id/socialLoginLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/googleLoginButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/sign_in_with_google"
                    android:padding="8dp"
                    android:src="@drawable/google_icon" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/facebookLoginButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/sign_in_with_facebook"
                    android:padding="8dp"
                    android:src="@drawable/fb_icon" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appleLoginButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/sign_in_with_apple"
                    android:padding="8dp"
                    android:src="@drawable/apple_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/socialLoginLayout"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/dontHaveAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_dont_have_account"
                    android:textColor="@color/text_color_secondary"
                    android:textSize="19sp"
                    app:fontFamily="@font/roboto_regular" />

                <TextView
                    android:id="@+id/signUpLinkTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto_bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>